--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.3",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "expo": "~52.0.27",
     "expo-blur": "~14.0.3",
