--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "expo": "~52.0.27",
+    "expo-app-loading": "^2.1.1",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
